# food-pricing-bot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
notebooks/: 01.01_data_transformation.ipynb
src/food_pricing_bot/: bot.py  db.py  dump.py  settings.py  texts.py
src/food_pricing_bot/utils/: bot_logging.py  data.py  db.py  sampling.py  settings.py  storage.py  texts.py
