[tool.poetry]
name = "food-pricing-bot"
version = "0.0.1"
description = ""
authors = ["giacomorebecchi"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.2"
python-telegram-bot = "^13.13"
numpy = "^1.23.2"
pandas = "^1.4.3"
pyarrow = "^9.0.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^4.0"
black = "^22.3.0"
ipython = "^7.31.0"
ipykernel = "^6.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
packages = { find = { where = "src", include = "*", exclude = "*.egg-info" } }
package_dir = "src"
include_package_data = true